--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,16 @@
   <body>
     <div class="w-64 p-4 bg-gray-900 text-white space-y-4">
       <h1>Autospeed Yt</h1>
+
+      <label class="inline-flex items-center cursor-pointer">
+        <input type="checkbox" value="" class="sr-only peer" />
+        <div
+          class="relative w-9 h-5 bg-neutral-quaternary peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-brand-soft dark:peer-focus:ring-brand-soft rounded-full peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-buffer after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:rounded-full after:h-4 after:w-4 after:transition-all peer-checked:bg-brand"
+        ></div>
+        <span class="select-none ms-3 text-sm font-medium text-heading"
+          >Toggle me</span
+        >
+      </label>
     </div>
   </body>
 </html>
