commiting popup html

--- a/popup.html
+++ b/popup.html
@@ -19,5 +19,19 @@
         >
       </label>
     </div>
+
+    <label
+      for="default-range"
+      class="block mb-2.5 text-sm font-medium text-heading"
+      >Default range</label
+    >
+    <div>
+      <input
+        id="default-range"
+        type="range"
+        value="50"
+        class="w-full h-2 bg-neutral-quaternary rounded-full appearance-none cursor-pointer"
+      />
+    </div>
   </body>
 </html>
