--- a/popup.html
+++ b/popup.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="tailwind.css">
+
   </head>
   <body>
     <!-- main -->
-    <div class="w-80 p-4 bg-gray-900 text-white space-y-6 rounded-xl">
+    <div class="w-80 p-4 bg-gray-900 text-white space-y-6">
       <h1 class="text-xl font-bold flex items-center justify-center">
         Autospeed YT
       </h1>
@@ -16,7 +18,7 @@
       <div class="flex items-center justify-between">
         <span>Enable Dynamic Speed</span>
 
-        <!-- put your toggle here -->
+        <!--  toggle idhr hai udhar kya dhund rha hai be ch**ya-->
         <div class="relative inline-block w-11 h-5">
           <input
             checked
